fix horizontal scroll issue and some minor styling

--- a/chrome/minimal-twitter.css
+++ b/chrome/minimal-twitter.css
@@ -1,7 +1,3 @@
-html, body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
 header[role="banner"] {
   align-items: start !important;
   max-width: 100px !important;
@@ -9,6 +5,12 @@ header[role="banner"] {
 
 main[role="main"] {
   align-items: center !important;
+}
+
+@media all and (max-width: 987px) {
+  main[role="main"] {
+    align-items: flex-start !important;
+  }
 }
 
 a[aria-label="Tweet"][role="button"] {
@@ -33,7 +35,7 @@ div[data-testid="primaryColumn"] {
 
 div[data-testid="sidebarColumn"] {
   visibility: hidden !important;
-  width: 125px !important;
+  width: 150px !important;
 }
 
 form[aria-label="Search Twitter"][role="search"] {
@@ -45,6 +47,11 @@ form[aria-label="Search Twitter"][role="search"] {
 }
 
 @media all and (max-width: 1265px) {
+  div[data-testid="sidebarColumn"] {
+    visibility: hidden !important;
+    width: 100px !important;
+  }
+
   form[aria-label="Search Twitter"][role="search"] {
     visibility: hidden !important;
   }
